--- a/лягушонок (js)/style.css
+++ b/лягушонок (js)/style.css
@@ -25,10 +25,11 @@ h1
 
 p
 {
-    text-align: center;
     font-size: 20px;
     margin-left: 100px;
     margin-right: 100px;
+    margin-bottom: 25px;
+    margin-top: 25px;
 }
 
 .funfact1
@@ -40,6 +41,19 @@ p
 
 }
 .funfact1body{
+    margin-left: 0;
+    margin-right: 0;
+    font-size: 17px;
+}
+.funfact3
+{
+    color: rgb(18, 10, 126);
+    font-size: 25px;
+    margin-left: 0;
+    margin-right: 0;
+
+}
+.funfact3body{
     margin-left: 0;
     margin-right: 0;
     font-size: 17px;
@@ -100,7 +114,79 @@ p
     margin-top: 40px;
 }
 
+.pic3
+{
+    margin-top: 20px;
+
+    width: 30%;
+    height: 10%;
+}
+.pic4
+{
+    width: 30%;
+    height: 10%;
+}
+.pic6
+{    
+    margin-left: 100px;
+    width: 30%;
+    height: 10%;
+}
+
+.pic7
+{
+    width: 35%;
+}
+.pic8
+{
+    width: 35%;
+}
+
+.pics
+{
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+.pic9
+{
+    width: 30%;   
+}
+.pic10
+{
+    width: 30%;  
+}
+
+.funfact3body{
+    width: 30%;
+}
+
+.funfact3w
+{
+    width: 50%;
+}
+.ff33
+{
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 40px;
+    
+}
 .funfact{
     width: 30%;
+}
+
+.pic11
+{
+    margin-left: 100px;
+    width: 35%;
+}
+.pic12
+{
+    width: 35%;
 }
 
